Fix overflow-x on list

--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,7 @@ nav a {
 		width: 100%;
 		max-height: 200px;
 		overflow-y: scroll;
+		overflow-x: hidden;
 	}
 	#map {
 		width: 100%;
